--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "gatsby": "^4.12.1",
+    "gatsby-plugin-image": "^2.12.1",
     "gatsby-plugin-sass": "^5.12.1",
+    "gatsby-plugin-sharp": "^4.12.1",
+    "gatsby-source-filesystem": "^4.12.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "sass": "^1.50.0"
