--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "stylelint-config-standard-scss": "^3.0.0",
     "stylelint-order": "^5.0.0",
     "stylelint-scss": "^4.2.0"
+  },
+  "engines": {
+    "node": "18.20.2"
   }
 }
